# wheel-of-shame

./: .gitignore  IMPROVEMENTS.md  README.md  architecture.md  dev.sh  recommendation.md
backend/: Cargo.toml  Dockerfile
backend/src/: db.rs  error.rs  handlers.rs  lib.rs  main.rs  models.rs  routes.rs  ws.rs
backend/src/store/: memory.rs  mod.rs  sqlite.rs  ydb.rs
backend/tests/: api.rs
design-docs/: from-scratch-redesign.md  grok-design-doc-3-c6b475e9.md  grok-design-doc-4-2026-06-15.md  grok-design-doc-5-2026-06-15.md  grok-design-doc-5-summary-2026-06-15.md  iteration-1-top10.md  iteration-2-implement-core.md  next-100-ideas.md  next-500-ideas.md  top-100-ideas.md  top-200.md
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/bench/: .gitignore  inspect.mjs  profile.mjs  verify-reconnect.mjs  verify.mjs  wheel-bench.mjs
frontend/src/: App.vue  style.css
frontend/src/api/: client.ts
frontend/src/components/: AnalyticsPanel.vue  CommandPalette.vue  HistoryTimeline.vue  InspectorPanel.vue  NameList.vue  RecapReel.vue  ShortcutsSheet.vue  SpinResult.vue  TemplateGallery.vue  ToastStack.vue  WheelCanvas.vue  WheelSkeleton.vue
frontend/src/composables/: useCommandPalette.ts  useComments.ts  useCreateSession.ts  useExports.ts  useFlame.ts  useHistory.ts  useHotkeys.ts  usePreventRepeat.ts  usePreview.ts  useRecents.ts  useSession.ts  useSpin.ts  useToasts.test.ts  useToasts.ts  useVoice.ts  useWebSocket.test.ts  useWebSocket.ts  useWheelWorker.ts
infra/: api-gateway.yaml  deploy.sh  ydb-schema.sql
(+19 files in other folders)
