[package]
name = "wheel-of-shame"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.9"
chrono = { version = "0.4", features = ["serde"] }
ydb = "0.10"
tokio-stream = "0.1"
