[package]
name = "wheel-of-shame"
version = "0.1.0"
edition = "2021"

[features]
default = ["sqlite"]
sqlite = ["dep:sqlx"]
ydb = ["dep:ydb"]

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
rand = "0.10"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"

sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "sqlite",
    "chrono",
], optional = true }
ydb = { version = "0.13", optional = true }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
